# ece3574-project-0

Project0/: CMakeLists.txt  CMakeLists.txt.bak  Project0.sln  mytest.cpp  todo.cpp  todo.h
Project0/Debug/: Project0.ilk  test.txt  todo.txt
Project0/Project0/: Project0.vcxproj  Project0.vcxproj.filters  Source.cpp  Todo.cpp  main.cpp  mytest.cpp  resource.h  todo.aps  todo.h  todo.txt  x.cpp
Project0/Project0/Debug/: todo.obj.enc  vc140.idb
Project0/Project0/Debug/Project0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project0/Project0/Release/Project0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project0/Release/: Project0.iobj  Project0.ipdb  todo.txt
Project0/TestSuite/: TestSuite.aps  TestSuite.vcxproj  TestSuite.vcxproj.filters  mytest.h
Project0/TestSuite/Debug/: TestSuite.vcxprojResolveAssemblyReference.cache
